fix: fix wrong spacing

--- a/style.css
+++ b/style.css
@@ -168,3 +168,7 @@
         min-height: 280px;
     }
 }
+
+.my-pt-120 {
+    padding-top: 120px;
+}
